--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -10,6 +10,9 @@
 .m-t-2 {
   margin-top: 2rem;
 }
+.m-b-2 {
+  margin-bottom: 2rem;
+}
 
 .p-t-4 {
   padding-top: 4rem;
